[project]
name = "forget-me-not"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=0.28.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pyarrow>=19.0.0",
    "scipy>=1.15.1",
    "tiktoken>=0.8.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
